clang/test/BSC/Negative/Coroutine/AwaitExpr/await-expr-for-cond/await-expr-for-cond.cbs
// RUN: %clang_cc1 -internal-isystem %S/../../../../../../lib/Headers/bsc_include -verify %s

#include "../../async-func-read-opposite.hbs"

_Async int f(int start) { 
  int result = start;
  for (int i = _Await read(1); i < start; i++) { // #1
     int a = _Await read(1);
  }
  return result;
}

// expected-error@#1 {{_Await expression is not allowed to appear in condition statement of for loop}}

int main() {
  return 0;
}